--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.6",
     "openai": "^4.56.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "regex": "^4.1.3"
   },
   "devDependencies": {
     "eslint": "^8",
